--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,3 +1,3 @@
-email: 'jekyllserif@example.com'
-phone: '1800 123 000'
+email: 'namaste@mabakery.co.za'
+phone: '+27 69 420 1337'
 contact_button_link: 'contact'
