--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -1,6 +1,6 @@
 main:
-  - name: "Services"
-    url: "/services/"
+  - name: "Shop"
+    url: "/shop/"
     weight: 2
   - name: "Team"
     url: "/team/"
