--- a/_config.yml
+++ b/_config.yml
@@ -7,18 +7,18 @@ google_analytics_id: null
 homepage:
   show_call_box: true
 logo:
-  mobile: "images/logo/logo-mobile.svg"
-  desktop: "images/logo/logo.svg"
+  mobile: "images/logo/logo-full-no-bg.svg"
+  desktop: "logo-icon-no-bg.svg"
   desktop_height: "36px"
 footer:
   copyright_text: 'Free Jekyll theme by <a class="zerostatic" href="https://www.zerostatic.io">www.zerostatic.io</a>'
 
 seo:
-  meta_og_title: "Jekyll Serif Theme"
+  meta_og_title: "Má Bakery - Craft Cannabis Cookies and Confections"
   meta_og_type: "website"
   meta_og_url: "https://jekyll-serif-theme.netlify.app"
   meta_og_image: "https://raw.githubusercontent.com/zerostaticthemes/jekyll-serif-theme/master/screenshots/tn.png"
-  meta_og_description: "Jekyll Serif is a modern business theme for Hugo. It contains content types for the archetypical business website. The theme is fully responsive, blazing fast and artfully illustrated."
+  meta_og_description: ""
   meta_twitter_card: "summary"
   meta_twitter_site: "@zerostaticio"
   meta_twitter_creator: "@zerostaticio"
