--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
 baseurl: ''
 exclude: ['README.md']
 permalink: pretty
-title: 'Jekyll Serif'
+title: 'Má Bakery'
 
 google_analytics_id: null
 homepage:
   show_call_box: true
 logo:
   mobile: "images/logo/logo-full-no-bg.svg"
-  desktop: "logo-icon-no-bg.svg"
+  desktop: "images/logo/logo-icon-no-bg.svg"
   desktop_height: "36px"
 footer:
-  copyright_text: 'Free Jekyll theme by <a class="zerostatic" href="https://www.zerostatic.io">www.zerostatic.io</a>'
+  copyright_text: 'Copyright Má Bakery !YEAR! | Special thank you to <a class="zerostatic" href="https://www.zerostatic.io">www.zerostatic.io</a>'
 
 seo:
   meta_og_title: "Má Bakery - Craft Cannabis Cookies and Confections"
