Add regular logo to head

--- a/_config.yml
+++ b/_config.yml
@@ -8,12 +8,10 @@ homepage:
   show_call_box: true
 logo:
   mobile: "images/logo/logo-full-no-bg.svg"
-  desktop: "images/logo/logo-icon-no-bg.svg"
-  desktop_2: "images/logo/logo-full-typography.svg"
-  desktop_3: "images/logo/logo-typography-only-bakery.svg"
-  desktop_height: "72px"
+  desktop: "images/logo/logo-full-no-bg.svg"
+  desktop_height: "120px"
 footer:
-  copyright_text: 'Copyright Má Bakery !YEAR! | Special thank you to <a class="zerostatic" href="https://www.zerostatic.io">www.zerostatic.io</a>'
+  copyright_text: 'Copyright Má Bakery !YEAR! | Special thank you to <a class="zerostatic" href="https://www.zerostatic.io">www.zerostatic.io</a> and ontwerp.ch'
 
 seo:
   meta_og_title: "Má Bakery - Craft Cannabis Cookies and Confections"
